--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,17 @@ spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://${DB_HOST:database}:5432/meetup
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.kafka.bootstrap-servers=${KAFKA_HOST:kafka}:9092
+spring.datasource.url=jdbc:postgresql://${DB_HOST:database}:${DB_PORT:5432}/meetup
+spring.jpa.hibernate.ddl-auto=update
+spring.kafka.bootstrap-servers=${KAFKA_HOST:kafka}:${KAFKA_PORT:9092}
+
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
+management.server.port=9000
+management.health.db.enabled=true
+
+spring.main.cloud-platform=kubernetes
+spring.lifecycle.timeout-per-shutdown-phase=20s
+
+server.shutdown=graceful
